# routes/heroes.js
@@ -3,7 +3,7 @@ const router = require('express').Router();
 const dataController = require('../controllers/heroes');
 
 // req.isAuthenticated is provided from the auth router
-router.get('/profile', (req, res) => {
+router.get('/', (req, res) => {
     // #swagger.ignore = true
     if (req.oidc.isAuthenticated()) {
         res.render('profile', {
@@ -22,15 +22,6 @@ router.get('/profile', (req, res) => {
   }
 })
 
-router.get('/',
-    // #swagger.ignore = true
-    // #swagger.summary = 'returns ok if the service is running'
-    // #swagger.description = 'returns ok if the service is running'
-    /* #swagger.responses[200] = {
-            description: 'OK',
-        }
-    */
-    dataController.navigationUi);
 
 router.get('/hero-names-and-ids', 
     // #swagger.summary = 'returns all the hero names and their ids'
@@ -66,8 +57,7 @@ router.post('/hero', (req, res) => {
         // #swagger.summary = 'add a hero to the db'
         // #swagger.description = 'add a hero to the db'
         /* #swagger.responses[201] = {
-                description: 'OK',
-                schema: { $ref: '#definitions/insertionSuccess' }
+                description: 'OK'}
                 }
         }
         */
